<resources>
    <string name="app_name">保质期计算器</string>
    <string name="title_calculator">超市商品保质期计算器</string>
    <string name="label_product_name">商品名称</string>
    <string name="label_production_date">生产日期</string>
    <string name="label_shelf_life_value">保质期数值</string>
    <string name="label_shelf_life_unit">保质期单位</string>
    <string name="label_remind_days">临期提醒（提前天数）</string>
    <string name="action_add_product">添加商品</string>
    <string name="label_product_list">商品列表</string>
    <string name="empty_state">暂无商品，请先添加。</string>
    <string name="unit_days">天</string>
    <string name="unit_months">月</string>
    <string name="label_production_date_format">生产日期：%1$s</string>
    <string name="label_shelf_life_format">保质期：%1$d%2$s</string>
    <string name="label_expiry_date_format">到期日期：%1$s</string>
    <string name="label_remind_format">提醒提前：%1$d天（提醒日期：%2$s）</string>
    <string name="status_expired">已过期 %1$d 天</string>
    <string name="status_due_today">今日到期</string>
    <string name="status_near_expiry">临期：剩余 %1$d 天</string>
    <string name="status_ok">正常：剩余 %1$d 天</string>
    <string name="error_required">请填写此项</string>
    <string name="error_positive">请输入大于 0 的数值</string>
    <string name="error_non_negative">请输入不小于 0 的数值</string>
    <string name="error_pick_date">请选择生产日期</string>
    <string name="error_date_in_future">生产日期不能晚于今天</string>
    <string name="default_product_name">未命名商品</string>
    <string name="default_remind_days">3</string>
    <string name="action_add_to_calendar">添加到日历</string>
    <string name="notification_channel_name">临期提醒</string>
    <string name="notification_channel_description">超市商品临期或到期提醒</string>
    <string name="notification_title">临期提醒</string>
    <string name="notification_content_due_today">商品 %1$s 今日到期</string>
    <string name="notification_content_due_in_days">商品 %1$s 将于 %2$s 到期（剩余 %3$d 天）</string>
    <string name="calendar_event_title">临期提醒：%1$s</string>
    <string name="calendar_event_description">到期日期：%1$s</string>
    <string-array name="shelf_life_units">
        <item>@string/unit_days</item>
        <item>@string/unit_months</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
